# chicolli

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: colors.rs  config.rs  drawing.rs  drawing_tools.rs  main.rs
src/drawing/: arrow.rs  drawing_tool.rs  normal_line.rs  normal_rectangle.rs
src/styles/: style.css
