[package]
name = "gtk4-drawing-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.gtk]
package = "gtk4"
version = "0.7.1"
features = ["v4_10"]

[dependencies]
gio = "0.17.10"
gtk4-layer-shell = "0.1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"


